cart functionality, single card fix, align toggle fix, link updated

--- a/src/assets/styles/scss/common/_single_card.scss
+++ b/src/assets/styles/scss/common/_single_card.scss
@@ -21,12 +21,13 @@
 .single-card-horizontal {
   display: flex;
   align-items: center;
+
   button {
     display: inline-block;
     opacity: 0;
     position: absolute;
     top: 100px;
-    left: 28px;
+    left: 30px;
     transition: all 0.3s;
   }
 }
